--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <slf4j.version>1.7.25</slf4j.version>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
     </properties>
 
     <dependencies>
